--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -4,7 +4,7 @@ orbs:
   # Reference your orb's jobs and commands below as they will exist when built.
   orb-tools: circleci/orb-tools@12.0
   # The orb definition is intentionally not included here. It will be injected into the pipeline.
-  test-demo: {}
+  test-demo: jimicircleci/test-demo@dev:alpha
 
 # Use this tag to ensure test jobs always run,
 # even though the downstream publish job will only run on release tags.
@@ -37,6 +37,8 @@ workflows:
       - command-test:
           filters: *filters
       # The orb must be re-packed for publishing, and saved to the workspace.
+      - test-demo/hello:
+          to: jimi
       - orb-tools/pack:
           filters: *release-filters
       - orb-tools/publish:
@@ -47,5 +49,6 @@ workflows:
           requires:
             - orb-tools/pack
             - command-test
+            - test-demo/hello
           context: orb-publishing
           filters: *release-filters
