--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 description: >
   Sample orb description testing testng tsingsddfj testing tesing
+  testing testing testing tesging
 # What will your orb allow users to accomplish?
 # Descriptions should be short, simple, and informative.
 
